--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>esqueleto_t0_201920</name>
+	<name>Proyecto_1_201920_sec_2_team_x</name>
 	<comment></comment>
 	<projects>
 	</projects>
